# chat-local-docs

./: .README  .gitignore  Makefile  README.md  demo.py  modal_app.py  pyproject.toml
src/: cache.py  chunking.py  embeddings.py  eval.py  file_to_text.py  llm.py  main.py  reranking.py  vector_db.py
