[project]
name = "chat-local-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0",
    "modal>=0.73",
    "ollama>=0.6.1",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=2.7.0",
]
